--- a/index.html
+++ b/index.html
@@ -162,15 +162,15 @@
 									  <p>The report was developed to aid the new global operations team with thier reporting needs and tracking employee performance</p>
                                       <h3>Key Features</h3>
                                       <ul>
-                                         <li>The report integrates the data from planning sheets of all departments, data from the production database, and Client revenue data</li>
-                                         <li></li>
-                                         <li>Role-based access for departments and managers</li>
+                                         <li>The report integrates the data from planning sheets of all departments, data from the production database, and Client revenue data; with role-based access for departments and managers </li>
+                                         <li>Data was extracted using Google API and Cleaned/formatted using Python and SQL. Google API was also used to send alerts whenever any anomalies are found in the data.</li>
+                                         <li>Report highlights the clients that are being overserviced and employees that are not completing their timekeeping and are being overworked.</li>
                                       </ul>
                                       <h3>Outcomes</h3>
                                       <ul>
-                                         <li>Reduced billing errors by 70%</li>
-                                         <li>Improved collection cycle efficiency</li>
-                                         <li>Increased transparency and accountability</li>
+                                         <li>A unified view for the global operations team leading to increased transparency and accountability for perforemance of all departments.</li>
+                                         <li>Continuous performance monitoring led to stopping of 9 clients being overserviced. This also relfected by increasing the company's overall gross margin by 1%.</li>
+                                         <li>Reports also functions as the tool to determine the amount of human resource a department can have. Department are now able to use this report when requesting for additional resources from the recruitment team.</li>
                                       </ul>
 								</article>								
 								<article>
