--- a/index.html
+++ b/index.html
@@ -61,35 +61,35 @@
                                  <div style="flex: 1 1 300px; max-width: 350px; background: white; padding: 1.5em; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1); text-align: center;">
                                  <img src="images/20945194.jpg" alt="Data Analysis" style="width: 100%; border-radius: 8px; margin-bottom: 1em;">
                                  <h3>Crafting Insightful Narratives</h3>
-                                 <p><ul>
+                                 <ul>
 			                         <li>Analyze employee, customer, and campaign data to identify key patterns and trends</li>
 			                         <li>Translate insights into compelling stories that connect brand messages to audience needs</li>
 			                         <li>Visualize performance and personalize content through data-driven narratives</li>
 			                         <li>Review results to refine strategies for continuous improvement and stronger engagement</li>
-									 <li>Create data-driven reports for senior leadership, combining insights and visuals to support key bsuiness narratives</li>
-		                         </ul></p>
+									 <li>Create data-driven reports for senior leadership, combining insights and visuals to support key business narratives</li>
+		                         </ul>
                                  </div>
                                 <!-- Box 2 -->
                                  <div style="flex: 1 1 300px; max-width: 350px; background: white; padding: 1.5em; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1); text-align: center;">
                                  <img src="images/20943845.jpg" alt="Automation Workflow" style="width: 100%; border-radius: 8px; margin-bottom: 1em;">
                                  <h3>Automating Workflows and Reporting</h3>
-                                 <p><ul>
+                                 <ul>
 			                                 <li>Build scalable automated reports for stakeholders from junior associates to senior leadership</li>
 			                                 <li>Formulate KPIs and set schemas for data collection and storage</li>
 			                                 <li>Create data pipelines to extract data from BigQuery, transform it using Python and SQL, and load data into platforms like Google Sheets, Datorama, and Looker Studio</li>
 			                                 <li>Create dashboards on these platforms to gain actionable insights and monitor KPI performance</li>
-		                                </ul></p>
+		                                </ul>
                                  </div>
                                 <!-- Box 3 -->
                                  <div style="flex: 1 1 300px; max-width: 350px; background: white; padding: 1.5em; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1); text-align: center;">
                                  <img src="images/4896718.jpg" alt="Strategy Consulting" style="width: 100%; border-radius: 8px; margin-bottom: 1em;">
                                  <h3>Query, Analyze, Visualize</h3>
-                                 <p>										<ul>
+                                 <ul>
 			                                 <li>Extract meaningful data from the production database using advanced SQL queries to create Board Reports</li>
-			                                 <li>Analyse performance metrics to gain insights. Identified several key areas of business where perforemance could be improved</li>
+			                                 <li>Analyse performance metrics to gain insights. Identified several key areas of business where performance could be improved</li>
 			                                 <li>Built intuitive and simplistic visuals to communicate complex data and convey data-driven insights</li>
-			                                 <li>Collaborate with stakeholders to tailor visuals and ensure insights are usable to support startegic decision-making</li>
-		                                </ul></p>
+			                                 <li>Collaborate with stakeholders to tailor visuals and ensure insights are usable to support strategic decision-making</li>
+		                                </ul>
                                  </div>
                                  </div>
                                  </section>
@@ -102,23 +102,23 @@
 										<h2>Automated billing tracker for the finance department</h2>
 									</header>
 									  <h3>Overview</h3>
-									  <p>The tracker was built to help the GMP team and the finance deaprtment to keep track of their monthly invoicing requirement</p>
+									  <p>The tracker was built to help the GMP team and the finance department to keep track of their monthly invoicing requirement</p>
                                       <h3>Key Features</h3>
                                       <ul>
                                          <li>Key information was extracted from 100s of invoices and formatted to be outputted onto a google sheets</li>
-                                         <li>The tracker appropriates the invoices to the correct client through REGEXMACTH and VLOOKUP and appropriates the correct upcharge using SUMIFS and VLOOkUP with ARRAYFORMULA</li>
+                                         <li>The tracker appropriates the invoices to the correct client through REGEXMATCH and VLOOKUP and appropriates the correct upcharge using SUMIFS and VLOOKUP with ARRAYFORMULA</li>
                                          <li>After the QA, The revenue gets extracted to store in the organisation's data warehouse</li>
                                       </ul>
                                       <h3>Outcomes</h3>
                                       <ul>
-                                         <li>Removed all billing inaccurecies</li>
+                                         <li>Removed all billing inaccuracies</li>
                                          <li>Reduced the time taken to create and QA the tracker by 94% (45 Hours to 2 Hours)</li>
                                          <li>Invoices were quickly linked to clients which led to very quick invoicing to clients. This boosted client satisfaction with the whole process</li>
                                       </ul>
 								</article>
 								<article>
 									<header>
-										<h2>ETL Pipelines for BI team's data warhouse</h2>
+										<h2>ETL Pipelines for BI Team’s Data Warehouse</h2>
 									</header>
 									  <h3>Overview</h3>
                                       <p> A data warehouse was created to serve as the single source of truth for the organisation's performance and reporting</p>
@@ -130,7 +130,7 @@
                                       </ul>
                                       <h3>Outcomes</h3>
                                       <ul>
-                                         <li>Figures reported within the organisation by various stakeholder ranging from the junior associates to COO became consistent</li>
+                                         <li>Reports within the organisation by various stakeholder ranging from the junior associates to COO became consistent</li>
                                          <li>Provided the Business Intelligence team more control over the data</li>
                                          <li>Monitoring of Major KPIs performance became accurate, more transparent, and consistent</li>
                                       </ul>
@@ -149,8 +149,8 @@
                                          </ul>
                                       <h3>Outcomes</h3>
                                       <ul>
-                                         <li>one of the strategies provided in the report got implemented within the organisation</li>
-                                         <li>Croudie usage increased by 43% within 6 months and the overall target was achieved within an year</li>
+                                         <li>one of the strategies provided in the report was implemented within the organisation</li>
+                                         <li>Croudie usage increased by 43% within 6 months and the overall target was achieved within a year</li>
                                          <li>The report also led to a new and improved automated reporting system for the network team (the team that deals with croudies) </li>
                                       </ul>
 								</article>
@@ -159,23 +159,23 @@
 										<h2>Capacity Planner</h2>
 									</header>
 									  <h3>Overview</h3>
-									  <p>The report was developed to aid the new global operations team with thier reporting needs and tracking employee performance</p>
+									  <p>The report was developed to aid the new global operations team with their reporting needs and tracking employee performance</p>
                                       <h3>Key Features</h3>
                                       <ul>
                                          <li>The report integrates the data from planning sheets of all departments, data from the production database, and Client revenue data; with role-based access for departments and managers </li>
-                                         <li>Data was extracted using Google API and Cleaned/formatted using Python and SQL. Google API was also used to send alerts whenever any anomalies are found in the data.</li>
+                                         <li>Data was extracted using Google API and cleaned and formatted using Python and SQL. Google API was also used to send alerts whenever any anomalies are found in the data.</li>
                                          <li>Report highlights the clients that are being overserviced and employees that are not completing their timekeeping and are being overworked.</li>
                                       </ul>
                                       <h3>Outcomes</h3>
                                       <ul>
-                                         <li>A unified view for the global operations team leading to increased transparency and accountability for perforemance of all departments.</li>
-                                         <li>Continuous performance monitoring led to stopping of 9 clients being overserviced. This also relfected by increasing the company's overall gross margin by 1%.</li>
-                                         <li>Reports also functions as the tool to determine the amount of human resource a department can have. Department are now able to use this report when requesting for additional resources from the recruitment team.</li>
+                                         <li>A unified view for the global operations team leading to increased transparency and accountability for performance of all departments.</li>
+                                         <li>Continuous performance monitoring led to stopping of 9 clients being overserviced. This also reflected by increasing the company's overall gross margin by 1%.</li>
+                                         <li>Reports also also functions as the tool to determine the amount of human resource a department can have. Department are now able to use this report when requesting for additional resources from the recruitment team.</li>
                                       </ul>
 								</article>								
 								<article>
 									<header>
-										<h2> flow shop scheduling problem</h2>
+										<h2>Flow Shop Scheduling Problem</h2>
 									</header>
 									<img src="images/img_4.jpg" alt="" style="width: 100%; border-radius: 8px; margin-bottom: 1em;"/>
 									  <h3>Overview</h3>
@@ -205,7 +205,7 @@
 								</article>
 								<article>
 									<header>
-										<h2>Sales forecasting for Drug Store Chain</h2>
+										<h2>Sales Forecasting for Drug Store Chain</h2>
 									</header>
 									<img src="images/img_5.jpg" alt=""style="width: 100%; border-radius: 8px; margin-bottom: 1em;" />
 									  <h3>Overview</h3>
